--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "karma-webpack": "^5.0.0",
     "nodemon": "^3.1.7",
     "ts-loader": "^9.4.2",
-    "typescript": "^4.9.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^4.9.5",
     "webpack": "^5.75.0",
     "webpack-dev-server": "^4.11.1"
   },
